{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 245,
  "lineage": "2e06c1da-c8f6-e09d-4db7-bb4172b0e3a6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kube",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-00ff42fcb4bf0cf2a",
            "owner_id": "647760465836",
            "tags": {
              "Name": "kube internet gateway"
            },
            "vpc_id": "vpc-06dcc12317c81b642"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kube",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "primary-association",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "secondary-association",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kube",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker-talk-to-cluster",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker-talk-to-self",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:647760465836:subnet/subnet-0e8159a6b5cbd33fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0e8159a6b5cbd33fc",
            "map_public_ip_on_launch": true,
            "owner_id": "647760465836",
            "tags": {
              "Name": "kube primary subnet"
            },
            "vpc_id": "vpc-06dcc12317c81b642"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secondary",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:647760465836:subnet/subnet-0aebc11c370dabbb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0aebc11c370dabbb1",
            "map_public_ip_on_launch": true,
            "owner_id": "647760465836",
            "tags": {
              "Name": "kube secondary subnet"
            },
            "vpc_id": "vpc-06dcc12317c81b642"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kube",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:647760465836:vpc/vpc-06dcc12317c81b642",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08b551e5c7ecc045b",
            "default_route_table_id": "rtb-020934f5f4c186500",
            "default_security_group_id": "sg-0c720b3f9bb086ec6",
            "dhcp_options_id": "dopt-db7ff9bf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06dcc12317c81b642",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-020934f5f4c186500",
            "owner_id": "647760465836",
            "tags": {
              "Name": "kube vpc"
            }
          }
        }
      ]
    }
  ]
}